--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -22,6 +23,7 @@
     "mongoose-encryption": "^2.1.2",
     "mongoose-findorcreate": "^3.0.0",
     "multer": "^1.4.3",
+    "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
